--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>    
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://krstackblogs2.github.io/How-Coconut-Granola-Clusters-Can-Help-Support-Lower-Cholesterol/">https://krstackblogs2.github.io/How-Coconut-Granola-Clusters-Can-Help-Support-Lower-Cholesterol/</a><br>    
+                <a target="_bLank" href="https://adventuremediaco.s3.us-east-005.backblazeb2.com/How+Coconut+Granola+Clusters+Can+Help+Support+Lower+Cholesterol/index.html">https://adventuremediaco.s3.us-east-005.backblazeb2.com/How+Coconut+Granola+Clusters+Can+Help+Support+Lower+Cholesterol/index.html</a><br>
+                <a target="_bLank" href="https://symphonious-kashata-bc085b.netlify.app/">https://symphonious-kashata-bc085b.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
